--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 server.port=${APP_PORT:8080}
 
+# Настройки подключения к БД
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/sneakers_shop}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DATASOURCE_USER:postgres}
 spring.datasource.password=${DATASOURCE_PASS:postgres}
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+# Настройки Liquibase
 spring.liquibase.enabled=true
 spring.liquibase.default-schema=${LIQUIBASE_DEFAULT_SCHEMA:sneakers_shop}
