--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=${APP_PORT:8080}
 
+spring.main.allow-circular-references=true
+
 # Настройки подключения к БД
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/sneakers_shop}
 spring.datasource.driver-class-name=org.postgresql.Driver
