реализовал создание заказов

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changeset/dml/00001_fill_dictionaries.yaml
   - include:
       file: db/changelog/changeset/ddl/00004_alter_phone_number.yaml
+  - include:
+      file: db/changelog/changeset/ddl/00005_add_count_to_shoes_in_stock.yaml
