--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changeset/ddl/00005_add_count_to_shoes_in_stock.yaml
   - include:
       file: db/changelog/changeset/dml/00002_add_admin_account.yaml
+  - include:
+      file: db/changelog/changeset/ddl/00006_add_is_active_to_users.yaml
